TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA at 
telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
 
tbaMUD 3.56
[Jun 11 2008] - Rumble
  Added notification via prompt for new MOTD and news entries. (thanks Jamdog)
  Added all option to the restore command. (thanks Jamdog)
  Added new trigger variable hasattached. (thanks Fizban)
[Jun 10 2008] - Rumble
  Added spec proc type under stat. (thanks Jamdog)
  Only allow immortals to talk while invis and be displayed as "someone." (thanks Frenze)
[May 27 2008] - Rumble
  Fixed list_obj_to_char from only checking invisibility on first object of the same vnum. (thanks Laoris)
  Added object stacking when looking at a character's inventory. (thanks Jamdog)
[May 22 2008] - Rumble
  Added zone name to where command. (thanks Jamdog)
[May 21 2008] - Rumble
  Rewrite of void script_vlog to prevent possible crash bug on some OS's. (thanks Jamdog)
[May 17 2008] - Rumble
  Fixed a possible crash bug in qedit. (thanks Jamdog)
  Bug fix: Page command was paging when the character was not found and sending a NOPERSON message when he was found.
[May 15 2008] - Rumble
  Fixed a bug where deleting the last quest in qedit caused a crash. (thanks Jamdog)
  Updated autorun to fix a random syslog numbering bug. (thanks Zizazat)
[May 10 2008] - Rumble
  Fixed another typo, added a check for !NPC do_gen_comm, and changed do_return to only run autowiz if level changes. (thanks Fizban)
[May 08 2008] - Rumble
  Cleaned up numerous warnings found by adding -Wextra -Wcast-qual -Wshadow -Wno-unused flags.
[May 05 2008] - Rumble
  Changed command do_list_llog_entries to normal function, it was not being used as a command. (thanks Rhade)
  Removed several useless if checks. (thanks Elanthis)
  Fixed zmalloc to work on 64 bit machines.
[May 04 2008] - Rumble
  Fixed numerous warnings for gcc -g -O2 -W -Wshadow -Wcast-qual flags.