@@ -1833,8 +1833,8 @@ ACMD(do_toggle)
     "You can now hear the Wiz-channel.\r\n",
     "You are now deaf to the Wiz-channel.\r\n"},
     {"quest", PRF_QUEST, 0,
-    "Okay, you are part of the Quest.\r\n",
-    "You are no longer part of the Quest.\r\n"},
+    "You are no longer part of the Quest.\r\n",
+    "Okay, you are part of the Quest.\r\n"},
     {"showvnums", PRF_SHOWVNUMS, LVL_IMMORT,
     "You will no longer see the vnums.\r\n",
     "You will now see the vnums.\r\n"},
